docker_assets/fib/k8s/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: postgres # Check deployment with this metadata label
  ports:
    - port: 5432
      targetPort: 5432
